prevent the main content from overflowing

--- a/sass/components/misc.scss
+++ b/sass/components/misc.scss
@@ -287,3 +287,8 @@ span.inline-divider {
 		background-color: $modal-close-button-color;
 	}
 }
+
+// Prevent main content from overflowing.
+main {
+	overflow-wrap: break-word;
+}
